* Fixed secret question page, and overflow error in admin menus (index.css) [Bug 4405]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@10132 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1296,7 +1296,6 @@ ul#navigation li
 #adm_submenus, #adm_submenus ul
 {
 	height: 3em;
-	overflow: auto;
 }
 
 /* Styles for the general looks for the Curve theme.
@@ -3087,8 +3086,8 @@ div#profile_success
 #creator dd
 {
 	float: left;
-	width: 60%;
-	margin: 0 0 10px 0;
+	width: 55%;
+	margin: 0 0 10px 2px;
 }
 
 .ignoreboards
